--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,3 +24,13 @@
 .nav {
    margin-top: 5px;
 }
+
+.gravatar {
+   margin-bottom: 5px;
+   margin-left: 4px;
+}
+
+.pull-left {
+   margin-top: 3px;
+   text-align: right;
+}
