--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -9,7 +9,19 @@
    <div class="col-md-8">
       <p class="lead"><%= @topic.description %></p>
       <% @topic.posts.each do |post| %>
-         <%= render @topic.posts %>
+         <!-- <%= render @topic.posts %> -->
+         <div class="media">
+            <%= render partial: 'votes/voter', locals: { post: post } %>
+            <div class="media-body">
+               <h4 class="media-heading">
+                  <%= link_to post.title, topic_post_path(@topic, post) %>
+               </h4>
+               <small>
+                  submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %> <br>
+                  <%= post.comments.count %> Comments
+               </small>
+            </div>
+         </div>
       <% end %>
    </div>
    <% if current_user %>
